--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/libs.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
+  </head>
+  <body>
+    <h1>Translation calculator</h1>
+    <label for="">Enter your text here</label>
+    <textarea name="" id="text-input"></textarea>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <div class="words-number">
+        Total words: <span class="number-words number"></span>
+      </div>
+      <div class="sentences-number">
+        Total sentences:
+        <span class="number-sentences number"></span>
+      </div>
+      <div class="names-number">
+        Total proper names:
+        <span class="number-names number"></span>
+      </div>
+      <div class="symbols-number">
+        Total symbols:
+        <span class="number-symbols number"></span>
+      </div>
+      <div class="total">
+        Total price is: <span class="total-price"></span
+        ><span class="currency hidden"> UAH</span>
+      </div>
+    </div>
+    <div class="overlay hidden"></div>
+    <button class="btn calculate-all">Calculate</button>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/style.min.css">
-</head>
-
-<body>
-	Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dignissimos corporis aperiam praesentium nostrum maxime
-	aliquam libero debitis animi aliquid nihil ea temporibus voluptate, possimus eveniet ducimus delectus. Tempora,
-	itaque!
-	Sit fugit explicabo ipsum necessitatibus quo rerum laudantium nostrum sint. Dolore corrupti ad maxime magni, qui
-	porro repellendus excepturi consequatur aliquid eaque? Nulla vel quisquam vitae, ex maiores necessitatibus explicabo!
-	Officia aspernatur laboriosam fugiat assumenda, numquam eaque suscipit nam deleniti recusandae vero itaque aliquid
-	exercitationem magni animi nostrum autem, perspiciatis doloremque. Sed quasi dolorum, eveniet perspiciatis quam id
-	aut voluptatibus.
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="/app/js/libs.min.js"></script>
-	<script src="/app/js/main.min.js"></script>
-</body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="app/js/libs.min.js"></script>
+    <script src="app/js/main.js"></script>
+  </body>
 </html>
