--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
     <button class="btn calculate-all">Calculate</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="app/js/libs.min.js"></script>
-    <script src="app/js/main.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
